--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,16 +1,6 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
+@import "from-template.less";
 @icon-font-path: "../fonts/glyphicons/";
-
-.browsehappy {
-  margin: 0.2em 0; 
-  background: #ccc; 
-  color: #000; 
-  padding: 0.2em 0; 
-}
-
-.jumbotron {
-  margin: 50px auto 0 auto;
-}
 
 .column-marker {
   color: @gray-lighter;
