--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,9 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
 @import "from-template.less";
+@import url(http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic);
 @icon-font-path: "../fonts/glyphicons/";
+
+@font-family-base: "Lora", serif;
 
 .column-marker {
   color: @gray-lighter;
