--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -5,6 +5,10 @@
 
 @font-family-base: "Lora", serif;
 
+body {
+  padding-top: 65px;
+}
+
 .column-marker {
   color: @gray-lighter;
   text-align: center;
