experimenting with color

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,6 +4,9 @@
 @icon-font-path: "../fonts/glyphicons/";
 
 @font-family-base: "Lora", serif;
+@headings-color: #66577A;
+@text-color: #241605;
+@brand-success: #05F25C;
 
 body {
   padding-top: 65px;
