--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,12 +1,27 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
 @import "from-template.less";
 @import url(http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic);
-@icon-font-path: "../fonts/glyphicons/";
+@icon-font-path:          "../fonts/glyphicons/";
 
-@font-family-base: "Lora", serif;
-@headings-color: #66577A;
-@text-color: #241605;
-@brand-success: #05F25C;
+// http://www.smidswaterfont.com/
+@font-face{
+  font-family: "sw_light";
+  src: url('../fonts/smidswater/SmidsLig.ttf'),
+  url('SmidsLig.eot'); /* IE */
+}
+
+@font-size-base: 16px;
+@font-family-base:        "sw_light";
+
+@headings-color:          #3B383F;
+@text-color:              #5A5653;
+@brand-success:           #91D8D0;
+
+@navbar-default-color:    #3B383F;
+@navbar-default-bg:       #3B383F;
+@navbar-default-link-color: #F3F0EE;
+@navbar-default-link-active-color: #EFA20F;
+@navbar-default-link-hover-color: #EFA20F;
 
 body {
   padding-top: 65px;
