more mucking around with colors

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -20,8 +20,10 @@
 @navbar-default-color:    #3B383F;
 @navbar-default-bg:       #3B383F;
 @navbar-default-link-color: #F3F0EE;
-@navbar-default-link-active-color: #EFA20F;
+@navbar-default-link-active-color: #3B383F;
 @navbar-default-link-hover-color: #EFA20F;
+@navbar-default-link-active-bg: #F3F0EE;
+@navbar-default-toggle-hover-bg: #4E5863;
 
 body {
   padding-top: 65px;
