--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -15,7 +15,7 @@
 
 @headings-color:          #3B383F;
 @text-color:              #5A5653;
-@brand-success:           #91D8D0;
+@brand-success:           #2FD8D0;
 
 @navbar-default-color:    #3B383F;
 @navbar-default-bg:       #3B383F;
@@ -24,9 +24,14 @@
 @navbar-default-link-hover-color: #EFA20F;
 @navbar-default-link-active-bg: #F3F0EE;
 @navbar-default-toggle-hover-bg: #4E5863;
+@navbar-default-border: #F3F0EE;
+
+@border-radius-base:        0px;
+@border-radius-large:       0px;
+@border-radius-small:       0px;
 
 body {
-  padding-top: 65px;
+  padding-top: 70px;
 }
 
 .column-marker {
