--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -36,6 +36,12 @@
 @border-radius-large:       0px;
 @border-radius-small:       0px;
 
+@carousel-caption-color: black;
+
+.carousel-caption {
+  font-size: 30px;
+}
+
 body {
   padding-top: 70px;
 }
