--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -30,6 +30,9 @@
 @navbar-default-toggle-hover-bg: #4E5863;
 @navbar-default-border: #F3F0EE;
 
+@dropdown-bg:  #F3F0EE;
+@dropdown-link-hover-bg: #91D8D0;
+
 @jumbotron-bg: #F3F0EE;
 
 @border-radius-base:        0px;
