regular font for form labels

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -13,6 +13,11 @@
   src: url('../fonts/smidswater/SmidsBol.ttf'),
   url('SmidsBol.eot'); /* IE */
 }
+@font-face{
+  font-family: "sw_regular";
+  src: url('../fonts/smidswater/SmidsReg.ttf'),
+  url('SmidsReg.eot'); /* IE */
+}
 
 @font-size-base: 16px;
 @font-family-base:        "sw_light";
@@ -85,4 +90,8 @@ h4 {
 .adoptions {
   background: rgba(90, 86, 83, 0.1);
   // background: #F3F0EE;
+}
+
+.form-horizontal label {
+  font-family: "sw_regular";
 }
